убрала ненужные классы, инлайн-блоки и добавила link шрифта

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pets Novikova</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:500|Roboto:400,400i&display=swap">
 	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/style.css">
 </head>
