--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 						<img src="images/epixx_pets_logo.png" alt="логотип">
 					</a>
 
-					<nav>
+					<nav class="header__navigation">
 						<ul class="header__navigation-list">
-							<li><a href="#block1">О питомнике</a></li>
-							<li><a href="#block2">Животные</a></li>
-							<li><a href="#block3">Отзывы</a></li>
-							<li><a href="#block4">Блог</a></li>
-							<li><a href="#block5">Контакты</a></li>
+							<li class="header__navigation-item"><a class="header__navigation-link"href="#block1">О питомнике</a></li>
+							<li class="header__navigation-item"><a class="header__navigation-link"href="#block2">Животные</a></li>
+							<li class="header__navigation-item"><a class="header__navigation-link"href="#block3">Отзывы</a></li>
+							<li class="header__navigation-item"><a class="header__navigation-link"href="#block4">Блог</a></li>
+							<li class="header__navigation-item"><a class="header__navigation-link"href="#block5">Контакты</a></li>
 						</ul>
 					</nav>
 
 					<a class="phone" href="tel:+79252569877">+7 (925) 256 98 77</a>
-					
+
 				</div>
 			</div>	
 		</header>
