стилизовала блок promo

--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
 <body>
 	<div class="wrapper" style="background-image: url(images/dog.png);">
 		<header class="header">
-
 			<div class="container">
-
 				<div class="row">
-
 					<a class="navigation-logo" href="/">
 						<img src="images/epixx_pets_logo.png" alt="логотип">
 					</a>
-
 					<nav class="header__navigation">
 						<ul class="header__navigation-list">
 							<li class="header__navigation-item"><a class="header__navigation-link"href="#block1">О питомнике</a></li>
@@ -28,18 +24,16 @@
 							<li class="header__navigation-item"><a class="header__navigation-link"href="#block5">Контакты</a></li>
 						</ul>
 					</nav>
-
 					<a class="phone" href="tel:+79252569877">+7 (925) 256 98 77</a>
-
 				</div>
 			</div>	
 		</header>
 
 		<main>
-			<section>
+			<section class="promo">
 				<div class="container">
-					<div class="promo">
-						<h1>Питомник породистых животных рядом с вашим домом</h1>
+					<div class="promo__item">
+						<h1>Питомник породистых животных рядом <br>с вашим домом</h1>
 						<p class="title">животные как дети - им нужны мы.</p>
 					</div>
 				</div>
