стилизовала секцию about

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<div class="container">
 					<div class="about__title">
 						<h2 class="about__head">О питомнике</h2>
-						<p class="about__item">Наш питомник - не просто дом для животных, а семья для разных пород собак и кошек</p>
+						<p class="about__item">Наш питомник - не просто дом для животных,<br>а семья для разных пород собак и кошек</p>
 					</div>
 				    <div class="row">
 				    	<div class="about__image">
@@ -51,10 +51,10 @@
 				    	</div>
 						<div class="about__description">
 					    	<ul class="about__list">
-					    		<li>Лучшие представители своей породы</li>
-					    		<li>Сбалансированный рацион питания питомца</li>
-					    		<li>Ежедевный уход и тренировки</li>
-					    		<li>Веселье, свежий воздух и отличная компания</li>
+					    		<li class="about__list-item">Лучшие представители своей породы</li>
+					    		<li class="about__list-item">Сбалансированный рацион питания питомца</li>
+					    		<li class="about__list-item">Ежедевный уход и тренировки</li>
+					    		<li class="about__list-item">Веселье, свежий воздух и отличная компания</li>
 					    	</ul>
 					    	<a class="button button--about" href="https://vk.com/videos-166537407?section=album_1&z=video-166537407_456239019%2Fclub166537407%2Fpl_-166537407_1" target="_blank">Видео с наших прогулок</a>
 				    	</div>
