--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<main>
 			<section class="promo">
-				<div class="container">
+				<div class="container promo__inner">
 					<div class="promo__item">
 						<h1>Питомник породистых животных рядом <br>с вашим домом</h1>
 						<p class="title">животные как дети - им нужны мы.</p>
