WIP. в процессе стилизация секции blog

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<div class="blog__info">
 							<div class="blog__description">
 								<h2 class="blog__head">Всё о животных</h2>
-								<p class="blog__description-title">Мы ведём активный блог про наших животных в социальных сетях - присоединяйтесь к нам. Полезные материалы про обучение, дрессировку, питание.</p>
+								<p class="blog__description-item">Мы ведём активный блог про наших животных в социальных сетях - присоединяйтесь к нам. Полезные материалы про обучение, дрессировку, питание.</p>
 							</div>
 						 	<div class="blog__social">
 								<a class="sprite_social" href="" target="_blank"></a>
