WIP. в процессе стилизация секции blog

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			
 			<section id="block4" class="blog" style="background-image: url(images/bg.blog.png);">
 				<div class="container">
-					<div class="row">
+					<div class="row blog__inner">
 						<div class="blog__info">
 							<div class="blog__description">
 								<h2 class="blog__head">Всё о животных</h2>
@@ -154,9 +154,10 @@
 						<div class="blog__post">
 						    <article class="blog__card">
 							    <a href="https://vk.com/@epixx_pets-diet-for-adult-dog" target="_blank">
-								    <img src="images/blog_list_img_1.png" alt="Весёлая собака">
+								    <div class="blog__card-"><img src="images/blog_list_img_1.png" alt="Весёлая собака">
+								    </div>
 								    <div class="blog__item">
-									    <h3>Правильный рацион для взрослого пса</h3>
+									    <h3 class="blog__item-inner">Правильный рацион для взрослого пса</h3>
 									    <p class="button button--post">Читать статью</p>
 								    </div>
 								</a>
@@ -165,7 +166,7 @@
 							    <a  href="https://vk.com/@epixx_pets-dogs-depression" target="_blank">
 								    <img src="images/blog_list_img_2.png" alt="Собака в депрессии">
 								    <div class="blog__item">
-									    <h3>Бывает ли собачья депрессия?</h3>
+									    <h3 class="blog__item-inner">Бывает ли собачья депрессия?</h3>
 									    <p class="button button--post">Читать статью</p>
 								    </div>
 								</a>
