Запилила секцию Contacts. Поправила margin у section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<div class="container">
 					<h2 class="contacts__head">Контакты</h2>
 					<div class="contacts__info">
-						 <div class="contacts__list">
+						<div class="contacts__list">
 							<h3 class="contacts__list-name">Адрес</h3>
 							<address>г. Санкт-Петербург, ул. Кирочная 61</address>
 						</div>
@@ -191,12 +191,12 @@
 						</div>
 						<div class="contacts__list">
 							<h3 class="contacts__list-name">Режим работы</h3>
-							<p>Каждый день с 10:00 до 22:00</p>
+							<span>Каждый день с 10:00 до 22:00</span>
 						</div>
 						<div class="contacts__list">
 							<h3 class="contacts__list-name">Телефон</h3>
-							<a class="contacts__link" href="tel:+79252567896">+7 (925) 256 78 96</a>
-							<p>Мы принимаем звонки с 10:00 до 21:00</p>
+							<a class="contacts__link" href="tel:+79252567896">+7 (925) 256 78 96</a><br>
+							<span>Мы принимаем звонки с 10:00 до 21:00</span>
 						</div>
 					</div>
 				</div>
