--- a/index.html
+++ b/index.html
@@ -204,14 +204,15 @@
 		</main>
 
 		<footer class="footer">
-			<div class="row">
-				<ul class="footer__navigation-list">
-					<li><a href="#block1">О питомнике</a></li>
-					<li><a href="#block2">Животные</a></li>
-					<li><a href="#block3">Отзывы</a></li>
-					<li><a href="#block4">Блог</a></li>
-					<li><a href="#block5">Контакты</a></li>
-				</ul>
+			<div class="row footer__navigation">
+				<div class="footer__navigation-inner">
+					<ul class="footer__navigation-list">
+						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block1">О питомнике</a></li>
+						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block2">Животные</a></li>
+						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block3">Отзывы</a></li>
+						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block4">Блог</a></li>
+						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block5">Контакты</a></li>
+					</ul>
 				<div class="footer__social">
 				    <a class="" href="" target="_blank"></a>
 					<a class="" href="" target="_blank"></a>
