WIP. начала стрелки

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pets Novikova</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:500|Roboto:400,400i&display=swap">
 	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/style.css">
 </head>
@@ -56,7 +55,7 @@
 					    		<li class="about__list-item">Ежедевный уход и тренировки</li>
 					    		<li class="about__list-item">Веселье, свежий воздух и отличная компания</li>
 					    	</ul>
-					    	<a class="button button--about" href="https://vk.com/videos-166537407?section=album_1&z=video-166537407_456239019%2Fclub166537407%2Fpl_-166537407_1" target="_blank">Видео с наших прогулок</a>
+					    	<a class="button button--about" href="https://vk.com/videos-166537407?section=album_1&z=video-166537407_456239019%2Fclub166537407%2Fpl_-166537407_1" target="_blank">Видео с наших прогулок <span class="arrow"></span></a>
 				    	</div>
 				    </div>
 				</div>
@@ -146,9 +145,9 @@
 								<p class="blog__description-item">Мы ведём активный блог про наших животных в социальных сетях - присоединяйтесь к нам. Полезные материалы про обучение, дрессировку, питание.</p>
 							</div>
 						 	<div class="blog__social">
-								<a class="sprite_social" href="" target="_blank"></a>
-							    <a class="sprite_social" href="" target="_blank"></a>
-						        <a class="sprite_social" href="" target="_blank"></a>
+								<a class="social social-vk" href="" target="_blank"></a>
+							    <a class="social social-fb" href="" target="_blank"></a>
+						        <a class="social social-inst" href="" target="_blank"></a>
 				        	</div>
 				        </div>	
 						<div class="blog__post">
