Добавила все стрелки

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</div>
 								<div class="animals__discriptions">
 									<p>Идеальный вариант городской собаки — они входят в тройку самых популярных собак на планете. Любят короткие прогулки и хорошо поспать.</p>
-									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_2" target="_blank">Посмотреть щенков</a>
+									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_2" target="_blank">Посмотреть щенков <span class="arrow"></span></a>
 								</div>	
 							</div>	
 						</article>
@@ -85,7 +85,7 @@
 								</div>
 								<div class="animals__discriptions">
 									<p>Добродушные, ориентированные на людей собаки. Они отлично ведут себя с детьми и больными. Могут быть повадырями.</p>
-									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_3" target="_blank">Посмотреть щенков</a>
+									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_3" target="_blank">Посмотреть щенков <span class="arrow"></span></a>
 								</div>	
 							</div>	
 						</article>
@@ -97,7 +97,7 @@
 								</div>
 								<div class="animals__discriptions">
 									<p>Эти собаки с характером. Они всегда серьёзны, но по временам проявляют характер.</p>
-									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_4" target="_blank">Посмотреть щенков</a>
+									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_4" target="_blank">Посмотреть щенков <span class="arrow"></span></a>
 								</div>	
 							</div>	
 						</article>
@@ -109,7 +109,7 @@
 								</div>
 								<div class="animals__discriptions">
 									<p>Активные и компанейские собаки. Любят много гулять, обладают отличным чувством юмора.</p>
-									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_5" target="_blank">Посмотреть щенков</a>
+									<a class="button button--animals" href="https://vk.com/epixx_pets?w=wall-166537407_5" target="_blank">Посмотреть щенков <span class="arrow"></span></a>
 								</div>	
 							</div>	
 						</article>
@@ -157,7 +157,7 @@
 								    </div>
 								    <div class="blog__item">
 									    <h3 class="blog__item-inner">Правильный рацион для взрослого пса</h3>
-									    <span class="button button--post">Читать статью</span>
+									    <span class="button button--post">Читать статью<span class="arrow"></span></span>
 								    </div>
 								</a>
 						    </article> 
@@ -167,7 +167,7 @@
 							    	</div>
 								    <div class="blog__item">
 									    <h3 class="blog__item-inner">Бывает ли собачья депрессия?</h3>
-									    <span class="button button--post">Читать статью</span>
+									    <span class="button button--post">Читать статью<span class="arrow"></span></span>
 								    </div>
 								</a>
 						    </article> 
@@ -212,10 +212,11 @@
 						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block4">Блог</a></li>
 						<li class="footer__navigation-item"><a class="footer__navigation-link"href="#block5">Контакты</a></li>
 					</ul>
+				</div>
 				<div class="footer__social">
-				    <a class="" href="" target="_blank"></a>
-					<a class="" href="" target="_blank"></a>
-				    <a class="" href="" target="_blank"></a>
+				    <a class="social footer__social-vk" href="" target="_blank"></a>
+				    <a class="social footer__social-fb" href="" target="_blank"></a>
+			        <a class="social footer__social-inst" href="" target="_blank"></a>
 			    </div>
 		    </div>
 		</footer>
