--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 			</section>
 			
-			<section id="block1" class="about">
+			<section id="block1" class="about about__img">
 				<div class="container">
 					<div class="about__title">
 						<h2 class="about__head">О питомнике</h2>
