--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 								<p class="blog__description-item">Мы ведём активный блог про наших животных в социальных сетях - присоединяйтесь к нам. Полезные материалы про обучение, дрессировку, питание.</p>
 							</div>
 						 	<div class="blog__social">
-								<a class="social social-vk" href="" target="_blank"></a>
-							    <a class="social social-fb" href="" target="_blank"></a>
-						        <a class="social social-inst" href="" target="_blank"></a>
+								<a class="social social-vk" href="#" target="_blank"></a>
+							    <a class="social social-fb" href="#" target="_blank"></a>
+						        <a class="social social-inst" href="#" target="_blank"></a>
 				        	</div>
 				        </div>	
 						<div class="blog__post">
@@ -214,9 +214,9 @@
 					</ul>
 				</div>
 				<div class="footer__social">
-				    <a class="social footer__social-vk" href="" target="_blank"></a>
-				    <a class="social footer__social-fb" href="" target="_blank"></a>
-			        <a class="social footer__social-inst" href="" target="_blank"></a>
+				    <a class="social footer__social-vk" href="#" target="_blank"></a>
+				    <a class="social footer__social-fb" href="#" target="_blank"></a>
+			        <a class="social footer__social-inst" href="#" target="_blank"></a>
 			    </div>
 		    </div>
 		</footer>
